metropolis generalized to both interactions, mylatticelib updated

--- a/results/Plot Specific Heat.ipynb
+++ b/results/Plot Specific Heat.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -23,10 +23,10 @@
     "pp.prepare_aps_fig(rcParams)\n",
     "\n",
     "    \n",
-    "L=[8,12]\n",
+    "L=[8,12,16,20]\n",
     "for l in L:\n",
     "    beta,cv,err=np.loadtxt(\"plaquettes/SpecHeatplaL\"+str(l)+\".dat\",unpack=True)\n",
-    "    plt.errorbar(beta,cv/(3*l**3),err/(3*l**3),label=r\"L=\"+str(l))\n",
+    "    plt.errorbar(beta,cv/(3*l**3),err/(3*l**3),errorevery=5,label=r\"L=\"+str(l))\n",
     "\n",
     "        \n",
     "plt.axvline(0.76141)\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -121,8 +121,12 @@
     "    beta,cv,err=np.loadtxt(\"plaquettes_with_field/MagnSuscL\"+str(l)+\".dat\",unpack=True)\n",
     "    plt.errorbar(beta,cv,err,label=r\"L=\"+str(l))\n",
     "\n",
-    "        \n",
+    "for l in L:\n",
+    "    beta,cv,err=np.loadtxt(\"plaquettes_with_field/HalfMagnSuscL\"+str(l)+\".dat\",unpack=True)\n",
+    "    plt.errorbar(beta,cv,err,label=r\"L=\"+str(l))\n",
+    "    \n",
     "plt.axvline(0.221654)\n",
+    "plt.axvline(0.221654/2)\n",
     "\n",
     "plt.axhline(0.0,color=\"black\")\n",
     "\n",
@@ -140,12 +144,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Plot the simple magnetization\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import rcParams\n",
+    "import prepare_plotting as pp\n",
+    "\n",
+    "pp.prepare_aps_fig(rcParams)\n",
+    "\n",
+    "    \n",
+    "L=[16]\n",
+    "for l in L:\n",
+    "    beta,cv,err=np.loadtxt(\"plaquettes_with_field/SimpleMagnMI\"+str(l)+\".dat\",unpack=True)\n",
+    "    plt.errorbar(beta,cv,err,label=r\"L=\"+str(l))\n",
+    "\n",
+    "plt.axvline(0.221654)\n",
+    "plt.axvline(0.221654/2)\n",
+    "\n",
+    "plt.axhline(0.0,color=\"black\")\n",
+    "\n",
+    "plt.xlabel(r\"loop tension~~~$h$\")\n",
+    "plt.ylabel(r\"magnetic field~~~$m$\")\n",
+    "\n",
+    "plt.gcf().subplots_adjust(bottom=0.155)\n",
+    "plt.gcf().subplots_adjust(left=0.155)\n",
+    "\n",
+    "#plt.xlim(0.3,0.8)\n",
+    "plt.legend(loc=\"upper left\",frameon=False,numpoints=1)\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
