--- a/results/PlotMI+Gamma.ipynb
+++ b/results/PlotMI+Gamma.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -88,7 +88,7 @@
     "rcParams['ytick.labelsize'] = 8\n",
     "\n",
     "\n",
-    "L=[8,12,16]\n",
+    "L=[4,8,12,16]\n",
     "\n",
     "for l in L:\n",
     "    beta,gamma,gamma_err=np.loadtxt(\"plaquettes_with_field/MI3D\"+str(l)+\"magn.dat\",unpack=True)\n",
@@ -105,9 +105,9 @@
     "plt.xlabel(r\"loop tension~~~$h$\")\n",
     "plt.gcf().subplots_adjust(bottom=0.135,left=0.155)\n",
     "\n",
-    "plt.xlim(0.0,0.6)\n",
+    "plt.xlim(0.0,0.3)\n",
     "#plt.ylim(0.0,0.8)\n",
-    "plt.legend(loc=\"center right\",frameon=False,numpoints=1)\n",
+    "plt.legend(loc=\"center left\",frameon=False,numpoints=1)\n",
     "plt.savefig(\"MI3d_plaquettes_magn.pdf\")\n",
     "plt.show()\n"
    ]
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -190,9 +190,18 @@
     "\n",
     "\n",
     "#plt.xlim(0.3,0.8)\n",
-    "plt.savefig(\"Gamma3d_vertices.pdf\")\n",
+    "#plt.savefig(\"Gamma3d_vertices.pdf\")\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -294,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -319,15 +328,15 @@
     "    \n",
     "    return ders\n",
     "    \n",
-    "L=[8,12,16]\n",
+    "L=[8,12,16,20]\n",
     "for l in L:\n",
-    "    beta,gamma,gamma_err=np.loadtxt(\"LW3D\"+str(l)+\"pla.dat\",unpack=True)\n",
-    "    plt.errorbar(beta,gamma,gamma_err,label=\"L = \"+str(l))\n",
+    "    beta,gamma,gamma_err=np.loadtxt(\"plaquettes/LW3D\"+str(l)+\"pla.dat\",unpack=True)\n",
+    "    plt.errorbar(beta,gamma,gamma_err,errorevery=5,label=\"L = \"+str(l))\n",
     "    #plt.plot(beta,numerical_der(beta,gamma,10))\n",
     "\n",
     "l=8\n",
-    "beta,gamma,gamma_err=np.loadtxt(\"LW3D\"+str(l)+\"plaswi.dat\",unpack=True)\n",
-    "plt.errorbar(beta,gamma,gamma_err,fmt='.',label=\"L = \"+str(l)+\", switcher\")\n",
+    "beta,gamma,gamma_err=np.loadtxt(\"plaquettes/LW3D\"+str(l)+\"plaswi.dat\",unpack=True)\n",
+    "#plt.errorbar(beta,gamma,gamma_err,fmt='.',label=\"L = \"+str(l)+\", switcher\")\n",
     "        \n",
     "plt.axvline(0.76141)\n",
     "plt.axvline(0.76141/2)\n",
@@ -356,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -370,16 +379,15 @@
     "pp.prepare_aps_fig(rcParams)\n",
     "\n",
     "    \n",
-    "L=[8,12]\n",
+    "L=[8,13,16]\n",
     "for l in L:\n",
     "    beta,gamma,gamma_err=np.loadtxt(\"plaquettes/LW3D\"+str(l)+\"platubes.dat\",unpack=True)\n",
     "    plt.errorbar(beta,gamma,gamma_err,label=\"L = \"+str(l)+\" tubes\")\n",
-    "    #plt.plot(beta,numerical_der(beta,gamma,10))L\n",
     "\n",
-    "L=[8,12]\n",
+    "L=[8]\n",
     "for l in L:\n",
-    "    beta,gamma,gamma_err=np.loadtxt(\"plaquettes/LW3D\"+str(l)+\"plalayers.dat\",unpack=True)\n",
-    "    plt.errorbar(beta,gamma/l,gamma_err,fmt='-',label=r\"L = \"+str(l)+\" layers, $\\gamma / L$\")\n",
+    "    beta,gamma,gamma_err=np.loadtxt(\"plaquettes/LW3D\"+str(l)+\"platubesswitch.dat\",unpack=True)\n",
+    "    plt.errorbar(beta,gamma,gamma_err,fmt='.',label=\"L = \"+str(l)+\" tubes switcher\")\n",
     "        \n",
     "plt.axvline(0.76141)\n",
     "plt.axvline(0.76141/2)\n",
@@ -402,12 +410,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Flux excitations with layers (plaquette)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import rcParams\n",
+    "import prepare_plotting as pp\n",
+    "\n",
+    "pp.prepare_aps_fig(rcParams)\n",
+    "\n",
+    "\n",
+    "\n",
+    "L=[8,12,16]\n",
+    "for l in L:\n",
+    "    beta,gamma,gamma_err=np.loadtxt(\"plaquettes/LW3D\"+str(l)+\"plalayers.dat\",unpack=True)\n",
+    "    plt.errorbar(beta,gamma/l,gamma_err,fmt='-',label=r\"L = \"+str(l)+\" layers, $\\gamma / L$\")\n",
+    "        \n",
+    "plt.axvline(0.76141)\n",
+    "plt.axvline(0.76141/2)\n",
+    "\n",
+    "plt.axhline(0.0,color=\"black\")\n",
+    "plt.axhline(np.log(2),color=\"red\")\n",
+    "\n",
+    "plt.xlabel(r\"$\\beta$\")\n",
+    "plt.ylabel(r\"$\\gamma$\")\n",
+    "\n",
+    "#plt.xlim(0.19,0.81)\n",
+    "plt.gcf().subplots_adjust(bottom=0.155)\n",
+    "plt.gcf().subplots_adjust(left=0.155)\n",
+    "plt.legend(loc=\"upper left\",frameon=False,numpoints=1)\n",
+    "plt.savefig(\"Gamma3d_plaquettes_layers.pdf\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Plaquette Groundstate in magnetic field"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
@@ -419,15 +473,15 @@
     "rcParams['text.usetex']     = True\n",
     "\n",
     "    \n",
-    "L=[8]\n",
+    "L=[8,13,16]\n",
     "for l in L:\n",
     "    magn,gamma,gamma_err=np.loadtxt(\"plaquettes_with_field/LW3D\"+str(l)+\"magntubes.dat\",unpack=True)\n",
     "    plt.errorbar(magn,gamma,gamma_err,label=\"L = \"+str(l))\n",
     "\n",
-    "L=[9]\n",
+    "L=[8]\n",
     "for l in L:\n",
-    "    magn,gamma,gamma_err=np.loadtxt(\"plaquettes_with_field/LW3D\"+str(l)+\"magntubes.dat\",unpack=True)\n",
-    "    plt.errorbar(magn,gamma,gamma_err,label=\"L = \"+str(l))\n",
+    "    magn,gamma,gamma_err=np.loadtxt(\"plaquettes_with_field/LW3D8magntubesswitch.dat\",unpack=True)\n",
+    "    plt.errorbar(magn,gamma,gamma_err,fmt='.',label=\"switcher L = \"+str(l))\n",
     "\n",
     "    \n",
     "plt.axvline(0.221654)\n",
