added include functional

--- a/results/PlotMI+Gamma.ipynb
+++ b/results/PlotMI+Gamma.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
@@ -93,6 +93,9 @@
     "for l in L:\n",
     "    beta,gamma,gamma_err=np.loadtxt(\"plaquettes_with_field/MI3D\"+str(l)+\"magn.dat\",unpack=True)\n",
     "    plt.errorbar(beta,gamma/(2*(l**2)-1)+np.log(2),gamma_err/(2*l**2-1),label=\"L = \"+str(l))\n",
+    "l=4\n",
+    "beta,gamma,gamma_err=np.loadtxt(\"plaquettes_with_field/MI3D\"+str(l+1)+\"magn.dat\",unpack=True)\n",
+    "plt.errorbar(beta,gamma/(2*(l**2)-1)+np.log(2),gamma_err/(2*l**2-1),label=\"L = \"+str(l))\n",
     "    \n",
     "    \n",
     "plt.axhline(0.0,color=\"black\")\n",
@@ -365,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
@@ -379,7 +382,7 @@
     "pp.prepare_aps_fig(rcParams)\n",
     "\n",
     "    \n",
-    "L=[8,13,16]\n",
+    "L=[8,12,16,17]\n",
     "for l in L:\n",
     "    beta,gamma,gamma_err=np.loadtxt(\"plaquettes/LW3D\"+str(l)+\"platubes.dat\",unpack=True)\n",
     "    plt.errorbar(beta,gamma,gamma_err,label=\"L = \"+str(l)+\" tubes\")\n",
@@ -415,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 67,
    "metadata": {
     "collapsed": true
    },
@@ -430,7 +433,7 @@
     "\n",
     "\n",
     "\n",
-    "L=[8,12,16]\n",
+    "L=[8,12,16,20]\n",
     "for l in L:\n",
     "    beta,gamma,gamma_err=np.loadtxt(\"plaquettes/LW3D\"+str(l)+\"plalayers.dat\",unpack=True)\n",
     "    plt.errorbar(beta,gamma/l,gamma_err,fmt='-',label=r\"L = \"+str(l)+\" layers, $\\gamma / L$\")\n",
@@ -461,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 72,
    "metadata": {
     "collapsed": false
    },
@@ -473,7 +476,7 @@
     "rcParams['text.usetex']     = True\n",
     "\n",
     "    \n",
-    "L=[6,7,8,13,16]\n",
+    "L=[8,13,16]\n",
     "for l in L:\n",
     "    magn,gamma,gamma_err=np.loadtxt(\"plaquettes_with_field/LW3D\"+str(l)+\"magntubes.dat\",unpack=True)\n",
     "    plt.errorbar(magn,gamma,gamma_err,label=\"L = \"+str(l))\n",
