--- a/results/PlotMI+Gamma.ipynb
+++ b/results/PlotMI+Gamma.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -92,11 +92,7 @@
     "\n",
     "for l in L:\n",
     "    beta,gamma,gamma_err=np.loadtxt(\"plaquettes_with_field/MI3D\"+str(l)+\"magn.dat\",unpack=True)\n",
-    "    plt.errorbar(beta,gamma/(2*(l**2)-1)+np.log(2),gamma_err/(2*l**2-1),label=\"L = \"+str(l))\n",
-    "l=4\n",
-    "beta,gamma,gamma_err=np.loadtxt(\"plaquettes_with_field/MI3D\"+str(l+1)+\"magn.dat\",unpack=True)\n",
-    "plt.errorbar(beta,gamma/(2*(l**2)-1)+np.log(2),gamma_err/(2*l**2-1),label=\"L = \"+str(l))\n",
-    "    \n",
+    "    plt.errorbar(beta,gamma/(2*(l**2))+np.log(2),gamma_err/(2*l**2),label=\"L = \"+str(l))  \n",
     "    \n",
     "plt.axhline(0.0,color=\"black\")\n",
     "plt.axhline(np.log(2),color=\"red\")\n",
@@ -368,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 76,
    "metadata": {
     "collapsed": false
    },
@@ -382,7 +378,7 @@
     "pp.prepare_aps_fig(rcParams)\n",
     "\n",
     "    \n",
-    "L=[8,12,16,17]\n",
+    "L=[8,12,16]\n",
     "for l in L:\n",
     "    beta,gamma,gamma_err=np.loadtxt(\"plaquettes/LW3D\"+str(l)+\"platubes.dat\",unpack=True)\n",
     "    plt.errorbar(beta,gamma,gamma_err,label=\"L = \"+str(l)+\" tubes\")\n",
@@ -390,7 +386,7 @@
     "L=[8]\n",
     "for l in L:\n",
     "    beta,gamma,gamma_err=np.loadtxt(\"plaquettes/LW3D\"+str(l)+\"platubesswitch.dat\",unpack=True)\n",
-    "    plt.errorbar(beta,gamma,gamma_err,fmt='.',label=\"L = \"+str(l)+\" tubes switcher\")\n",
+    "    #plt.errorbar(beta,gamma,gamma_err,fmt='.',label=\"L = \"+str(l)+\" tubes switcher\")\n",
     "        \n",
     "plt.axvline(0.76141)\n",
     "plt.axvline(0.76141/2)\n",
@@ -464,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -476,17 +472,12 @@
     "rcParams['text.usetex']     = True\n",
     "\n",
     "    \n",
-    "L=[8,13,16]\n",
+    "L=[8,12,16]\n",
     "for l in L:\n",
     "    magn,gamma,gamma_err=np.loadtxt(\"plaquettes_with_field/LW3D\"+str(l)+\"magntubes.dat\",unpack=True)\n",
     "    plt.errorbar(magn,gamma,gamma_err,label=\"L = \"+str(l))\n",
     "\n",
-    "L=[8]\n",
-    "for l in L:\n",
-    "    magn,gamma,gamma_err=np.loadtxt(\"plaquettes_with_field/LW3D8magntubesswitch.dat\",unpack=True)\n",
-    "    plt.errorbar(magn,gamma,gamma_err,fmt='.',label=\"switcher L = \"+str(l))\n",
     "\n",
-    "    \n",
     "plt.axvline(0.221654)\n",
     "plt.axvline(0.221654/2)\n",
     "\n",
@@ -497,8 +488,8 @@
     "plt.ylabel(r\"$\\gamma$\")\n",
     "\n",
     "#plt.xlim(0.3,0.8)\n",
-    "plt.legend(loc=\"upper left\")\n",
-    "#plt.savefig(\"Gamma3d_magn.pdf\")\n",
+    "plt.legend(loc=\"lower left\",frameon=False,numpoints=1)\n",
+    "plt.savefig(\"Gamma3d_magn.pdf\")\n",
     "plt.show()"
    ]
   }
