--- a/results/PlotMI+Gamma.ipynb
+++ b/results/PlotMI+Gamma.ipynb
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -380,7 +380,7 @@
     "pp.prepare_aps_fig(rcParams)\n",
     "\n",
     "    \n",
-    "L=[8,12,16,18,19]\n",
+    "L=[8,12,16,20]\n",
     "for l in L:\n",
     "    beta,gamma,gamma_err=np.loadtxt(\"plaquettes/LW3D\"+str(l)+\"platubes.dat\",unpack=True)\n",
     "    plt.errorbar(beta,gamma,gamma_err,label=\"L = \"+str(l)+\" tubes\")\n",
@@ -395,6 +395,8 @@
     "\n",
     "plt.axhline(0.0,color=\"black\")\n",
     "plt.axhline(np.log(2),color=\"red\")\n",
+    "plt.axhline(2*np.log(2),color=\"red\")\n",
+    "plt.axhline(3*np.log(2),color=\"red\")\n",
     "\n",
     "plt.xlabel(r\"$\\beta$\")\n",
     "plt.ylabel(r\"$\\gamma$\")\n",
@@ -462,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
