--- a/results/PlotMI+Gamma.ipynb
+++ b/results/PlotMI+Gamma.ipynb
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -494,6 +494,48 @@
     "#plt.xlim(0.3,0.8)\n",
     "plt.legend(loc=\"lower left\",frameon=False,numpoints=1)\n",
     "plt.savefig(\"Gamma3d_magn.pdf\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plaquette groundstate in anisotropic magnetic field, h_z <> h"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import rcParams\n",
+    "rcParams['text.usetex']     = True\n",
+    "\n",
+    "    \n",
+    "L=[8]\n",
+    "for l in L:\n",
+    "    magn,gamma,gamma_err=np.loadtxt(\"plaquettes_with_transverse_field/LW3D\"+str(l)+\"tubes.dat\",unpack=True)\n",
+    "    plt.errorbar(magn,gamma,gamma_err,label=\"L = \"+str(l))\n",
+    "\n",
+    "\n",
+    "#plt.axvline(0.221654)\n",
+    "#plt.axvline(0.221654/2)\n",
+    "\n",
+    "plt.axhline(0.0,color=\"black\")\n",
+    "plt.axhline(np.log(2),color=\"red\")\n",
+    "\n",
+    "plt.xlabel(r\"z loop tension~~~$h_z / h$\")\n",
+    "plt.ylabel(r\"$\\gamma$\")\n",
+    "\n",
+    "#plt.xlim(0.3,0.8)\n",
+    "plt.legend(loc=\"lower left\",frameon=False,numpoints=1)\n",
+    "plt.savefig(\"Gamma3d_transv_magn.pdf\")\n",
     "plt.show()"
    ]
   }
