transverse field compatible

--- a/results/PlotMI+Gamma.ipynb
+++ b/results/PlotMI+Gamma.ipynb
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 64,
    "metadata": {
     "collapsed": false
    },
@@ -506,9 +506,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 68,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -518,23 +518,23 @@
     "rcParams['text.usetex']     = True\n",
     "\n",
     "    \n",
-    "L=[8]\n",
-    "for l in L:\n",
+    "L=[8,9,10]\n",
+    "dtau = [0.5,0.5,0.5]\n",
+    "for l, tau in zip(L, dtau):\n",
     "    magn,gamma,gamma_err=np.loadtxt(\"plaquettes_with_transverse_field/LW3D\"+str(l)+\"tubes.dat\",unpack=True)\n",
-    "    plt.errorbar(magn,gamma,gamma_err,label=\"L = \"+str(l))\n",
+    "    plt.errorbar(magn*2*1./tau,gamma,gamma_err,label=r\"L = \"+str(l)+\", $\\Delta t$=\"+str(tau))\n",
     "\n",
-    "\n",
-    "#plt.axvline(0.221654)\n",
-    "#plt.axvline(0.221654/2)\n",
+    "plt.axvline(0.65695)\n",
+    "plt.axvline(0.65695/2)\n",
     "\n",
     "plt.axhline(0.0,color=\"black\")\n",
     "plt.axhline(np.log(2),color=\"red\")\n",
     "\n",
-    "plt.xlabel(r\"z loop tension~~~$h_z / h$\")\n",
+    "plt.xlabel(r\"loop tension~~~$h$\")\n",
     "plt.ylabel(r\"$\\gamma$\")\n",
     "\n",
     "#plt.xlim(0.3,0.8)\n",
-    "plt.legend(loc=\"lower left\",frameon=False,numpoints=1)\n",
+    "plt.legend(loc=\"upper right\",frameon=False,numpoints=1)\n",
     "plt.savefig(\"Gamma3d_transv_magn.pdf\")\n",
     "plt.show()"
    ]
