debugging anisotropic variant...in progress

--- a/results/PlotMI+Gamma.ipynb
+++ b/results/PlotMI+Gamma.ipynb
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 76,
    "metadata": {
     "collapsed": false
    },
@@ -380,7 +380,7 @@
     "pp.prepare_aps_fig(rcParams)\n",
     "\n",
     "    \n",
-    "L=[8,9,12,16,17,20]\n",
+    "L=[8,9,12,16,17,18,20]\n",
     "for l in L:\n",
     "    beta,gamma,gamma_err=np.loadtxt(\"plaquettes/LW3D\"+str(l)+\"platubes.dat\",unpack=True)\n",
     "    plt.errorbar(beta,gamma,gamma_err,label=\"L = \"+str(l)+\" tubes\")\n",
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 81,
    "metadata": {
     "collapsed": false
    },
@@ -518,11 +518,17 @@
     "rcParams['text.usetex']     = True\n",
     "\n",
     "    \n",
-    "L=[8,9,10]\n",
-    "dtau = [0.5,0.5,0.5]\n",
-    "for l, tau in zip(L, dtau):\n",
-    "    magn,gamma,gamma_err=np.loadtxt(\"plaquettes_with_transverse_field/LW3D\"+str(l)+\"tubes.dat\",unpack=True)\n",
+    "L=[8]\n",
+    "dtau = [0.25,0.45,0.65,0.85]\n",
+    "l=8\n",
+    "for tau in dtau:\n",
+    "    magn,gamma,gamma_err=np.loadtxt(\"plaquettes_with_transverse_field/LW3D\"+str(l)+\"_24_\"+str(tau)+\".dat\",unpack=True)\n",
     "    plt.errorbar(magn*2*1./tau,gamma,gamma_err,label=r\"L = \"+str(l)+\", $\\Delta t$=\"+str(tau))\n",
+    "\n",
+    "\n",
+    "\n",
+    "    #magn,gamma,gamma_err=np.loadtxt(\"plaquettes_with_transverse_field/LW3D\"+str(l)+\"tubes.dat\",unpack=True)\n",
+    "    #plt.errorbar(magn*2*1./tau,gamma,gamma_err,label=r\"L = \"+str(l)+\", $\\Delta t$=\"+str(tau))\n",
     "\n",
     "plt.axvline(0.65695)\n",
     "plt.axvline(0.65695/2)\n",
