--- a/results/PlotMI+Gamma.ipynb
+++ b/results/PlotMI+Gamma.ipynb
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {
     "collapsed": false
    },
@@ -476,7 +476,7 @@
     "rcParams['text.usetex']     = True\n",
     "\n",
     "    \n",
-    "L=[8,9,10,11,12,13]\n",
+    "L=[8,11,12,16]\n",
     "for l in L:\n",
     "    magn,gamma,gamma_err=np.loadtxt(\"plaquettes_with_field/LW3D\"+str(l)+\"magntubes.dat\",unpack=True)\n",
     "    plt.errorbar(magn,gamma,gamma_err,label=\"L = \"+str(l))\n",
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -519,12 +519,21 @@
     "\n",
     "    \n",
     "L=[8]\n",
-    "dtau = [0.25,0.45,0.65,0.85]\n",
+    "dtau = [0.5,0.75,1.0]\n",
     "l=8\n",
+    "w=16\n",
     "for tau in dtau:\n",
-    "    magn,gamma,gamma_err=np.loadtxt(\"plaquettes_with_transverse_field/LW3D\"+str(l)+\"_24_\"+str(tau)+\".dat\",unpack=True)\n",
+    "    magn,gamma,gamma_err=np.loadtxt(\"plaquettes_with_transverse_field/LW3D\"+str(l)+\"_\"+str(w)+\"_\"+str(tau)+\".dat\",unpack=True)\n",
     "    plt.errorbar(magn*2*1./tau,gamma,gamma_err,label=r\"L = \"+str(l)+\", $\\Delta t$=\"+str(tau))\n",
     "\n",
+    "dtau = [0.76]\n",
+    "dtau = [0.76,1.0]\n",
+    "\n",
+    "l=12\n",
+    "w=24\n",
+    "for tau in dtau:\n",
+    "    magn,gamma,gamma_err=np.loadtxt(\"plaquettes_with_transverse_field/LW3D\"+str(l)+\"_\"+str(w)+\"_\"+str(tau)+\".dat\",unpack=True)\n",
+    "    plt.errorbar(magn*2*1./tau,gamma,gamma_err,label=r\"L = \"+str(l)+\", $\\Delta t$=\"+str(tau))\n",
     "\n",
     "\n",
     "    #magn,gamma,gamma_err=np.loadtxt(\"plaquettes_with_transverse_field/LW3D\"+str(l)+\"tubes.dat\",unpack=True)\n",
@@ -533,8 +542,11 @@
     "plt.axvline(0.65695)\n",
     "plt.axvline(0.65695/2)\n",
     "\n",
+    "plt.axvline(0.58224,linestyle='--')\n",
+    "\n",
     "plt.axhline(0.0,color=\"black\")\n",
     "plt.axhline(np.log(2),color=\"red\")\n",
+    "plt.axhline(np.log(4),color=\"red\")\n",
     "\n",
     "plt.xlabel(r\"loop tension~~~$h$\")\n",
     "plt.ylabel(r\"$\\gamma$\")\n",
