anisotropic variant works

--- a/results/Plot Specific Heat.ipynb
+++ b/results/Plot Specific Heat.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -20,13 +20,18 @@
     "from matplotlib import rcParams\n",
     "import prepare_plotting as pp\n",
     "\n",
+    "from mpl_toolkits.axes_grid.inset_locator import inset_axes\n",
+    "from mpl_toolkits.axes_grid1.inset_locator import mark_inset\n",
+    "\n",
     "pp.prepare_aps_fig(rcParams)\n",
     "\n",
     "    \n",
     "L=[8,12,16,20]\n",
     "for l in L:\n",
     "    beta,cv,err=np.loadtxt(\"plaquettes/SpecHeatplaL\"+str(l)+\".dat\",unpack=True)\n",
-    "    plt.errorbar(beta,cv/(3*l**3),err/(3*l**3),errorevery=5,label=r\"L=\"+str(l))\n",
+    "    plt.errorbar(beta,cv/(3*l**3),err/(3*l**3),errorevery=5,capsize=1.5,label=r\"L=\"+str(l))\n",
+    "\n",
+    "    \n",
     "\n",
     "        \n",
     "plt.axvline(0.76141)\n",
@@ -36,11 +41,43 @@
     "plt.xlabel(r\"inverse temperature~~~$\\beta$\")\n",
     "plt.ylabel(r\"specific heat~~~$C_V$\")\n",
     "\n",
-    "plt.gcf().subplots_adjust(bottom=0.155)\n",
-    "plt.gcf().subplots_adjust(left=0.155)\n",
+    "plt.gcf().subplots_adjust(bottom=0.16,left=0.14,top=0.97,right=0.97)\n",
+    "\n",
+    "ax = plt.gca()\n",
+    "ax.xaxis.set_ticks_position('bottom')\n",
+    "plt.xlim(0.0,1.1)\n",
     "\n",
     "#plt.xlim(0.3,0.8)\n",
-    "plt.legend(loc=\"upper left\",frameon=False,numpoints=1)\n",
+    "plt.legend(loc=\"center right\",frameon=False,numpoints=1)\n",
+    "\n",
+    "\n",
+    "\n",
+    "### Inset #####\n",
+    "ax=plt.gca()\n",
+    "axins = inset_axes(ax, width=\"40%\", height=\"70%\", loc=6)\n",
+    "axins.set_xlim(0.7,0.77)\n",
+    "axins.set_ylim(0.2,2.8)\n",
+    "\n",
+    "plt.xticks(visible=False)\n",
+    "plt.yticks(visible=False)\n",
+    "\n",
+    "plt.tick_params(\n",
+    "    axis='both',          # changes apply to the x-axis\n",
+    "    which='both',      # both major and minor ticks are affected\n",
+    "    bottom='off',      # ticks along the bottom edge are off\n",
+    "    top='off',\n",
+    "    right='off',\n",
+    "    left='off',# ticks along the top edge are off\n",
+    "    labelbottom='off')\n",
+    "\n",
+    "mark_inset(ax, axins, loc1=2, loc2=3, fc=\"none\", ec=\"0.7\")\n",
+    "\n",
+    "for l in L:\n",
+    "    beta,cv,err=np.loadtxt(\"plaquettes/SpecHeatplaL\"+str(l)+\".dat\",unpack=True)\n",
+    "    axins.errorbar(beta,cv/(3*l**3),err/(3*l**3),errorevery=5,capsize=1.5,label=r\"L=\"+str(l))\n",
+    "axins.axvline(0.76141)\n",
+    "\n",
+    "\n",
     "plt.savefig(\"SpecHeatPlaquettes.pdf\")\n",
     "plt.show()"
    ]
@@ -54,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -197,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.11+"
   }
  },
  "nbformat": 4,
