--- a/results/PlotMI+Gamma.ipynb
+++ b/results/PlotMI+Gamma.ipynb
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false
    },
@@ -153,12 +153,12 @@
     "T_cross=[]\n",
     "for c,l in enumerate(Lver):\n",
     "    beta,gamma,gamma_err=np.loadtxt(\"vertices/LW3D\"+str(l)+\"ver.dat\",unpack=True)\n",
-    "    plt.errorbar(beta,gamma,gamma_err,errorevery=5,fmt='-',color=ccycle[c],label=\"L = \"+str(l))\n",
+    "    plt.errorbar(beta,gamma,gamma_err,errorevery=5,capsize=1.5,fmt='-',color=ccycle[c],label=\"L = \"+str(l))\n",
     "    derivative=numerical_der(beta,gamma,15)\n",
     "    T_cross.append(1./beta[np.argmax(derivative)])\n",
     "\n",
     "plt.axhline(0.0,color=\"black\")\n",
-    "plt.axhline(np.log(2),color=\"red\")\n",
+    "plt.axhline(np.log(2),xmin=0.4,color=\"red\")\n",
     "\n",
     "plt.xlabel(r\"inverse temperature~~~$\\beta$\")\n",
     "plt.ylabel(r\"topological entropy~~~$\\gamma$\")\n",
@@ -168,8 +168,11 @@
     "\n",
     "\n",
     "ax=plt.gca()\n",
+    "ax.tick_params(direction='out')\n",
+    "ax.xaxis.set_ticks_position('bottom')\n",
+    "\n",
     "axins = inset_axes(ax, width=0.77, height=0.6, loc=2, bbox_transform=ax.figure.transFigure, \n",
-    "                   bbox_to_anchor=[0.235,0.9])\n",
+    "                   bbox_to_anchor=[0.26,0.98])\n",
     "\n",
     "axins.plot(1./np.log(Lver),T_cross,'.-')\n",
     "a, b = np.polyfit(1./np.log(Lver),T_cross,1)\n",
@@ -187,11 +190,11 @@
     "axins.set_xticks([0.0,0.2,0.4])\n",
     "axins.set_yticks([0.0,0.2,0.4])\n",
     "\n",
-    "plt.gcf().subplots_adjust(bottom=0.14,left=0.12)\n",
+    "plt.gcf().subplots_adjust(bottom=0.16,left=0.14,top=0.99,right=0.97)\n",
     "\n",
     "\n",
     "#plt.xlim(0.3,0.8)\n",
-    "#plt.savefig(\"Gamma3d_vertices.pdf\")\n",
+    "plt.savefig(\"Gamma3d_vertices.pdf\")\n",
     "plt.show()\n"
    ]
   },
@@ -304,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -332,7 +335,7 @@
     "L=[8,12,16,20]\n",
     "for l in L:\n",
     "    beta,gamma,gamma_err=np.loadtxt(\"plaquettes/LW3D\"+str(l)+\"pla.dat\",unpack=True)\n",
-    "    plt.errorbar(beta,gamma,gamma_err,errorevery=5,label=\"L = \"+str(l))\n",
+    "    plt.errorbar(beta,gamma,gamma_err,errorevery=5,capsize=1.5,label=\"L = \"+str(l))\n",
     "    #plt.plot(beta,numerical_der(beta,gamma,10))\n",
     "\n",
     "l=8\n",
@@ -345,14 +348,16 @@
     "plt.axhline(0.0,color=\"black\")\n",
     "plt.axhline(np.log(2),color=\"red\")\n",
     "\n",
-    "plt.xlabel(r\"$\\beta$\")\n",
-    "plt.ylabel(r\"$\\gamma$\")\n",
+    "plt.xlabel(r\"inverse temperature~~~$\\beta$\")\n",
+    "plt.ylabel(r\"topological entropy~~~$\\gamma$\")\n",
+    "ax=plt.gca()\n",
+    "ax.xaxis.set_ticks_position('bottom')\n",
     "\n",
-    "plt.xlim(0.19,0.81)\n",
-    "plt.gcf().subplots_adjust(bottom=0.155)\n",
-    "plt.gcf().subplots_adjust(left=0.155)\n",
     "\n",
-    "plt.legend(loc=\"upper left\",frameon=False,numpoints=1)\n",
+    "plt.xlim(0.19,0.91)\n",
+    "plt.gcf().subplots_adjust(bottom=0.16,left=0.16,top=0.97,right=0.97)\n",
+    "\n",
+    "plt.legend(loc=\"upper center\",frameon=False,numpoints=1)\n",
     "plt.savefig(\"Gamma3d_plaquettes.pdf\")\n",
     "plt.show()"
    ]
@@ -464,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -506,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -519,15 +524,17 @@
     "\n",
     "    \n",
     "L=[8]\n",
-    "dtau = [0.76141,0.76142]\n",
     "l=8\n",
-    "w=16\n",
-    "for tau in dtau:\n",
+    "W=[8,16,20,24]\n",
+    "tau = 0.76141\n",
+    "TAU=[0.76141]\n",
+    "W=[8,12]\n",
+    "#for w in W:\n",
+    "for w in W:\n",
     "    magn,gamma,gamma_err=np.loadtxt(\"plaquettes_with_transverse_field/LW3D\"+str(l)+\"_\"+str(w)+\"_\"+str(tau)+\".dat\",unpack=True)\n",
-    "    plt.errorbar(magn*2*1./tau,gamma,gamma_err,label=r\"L = \"+str(l)+\" W = \"+str(2*l)+\", $\\Delta t$=\"+str(tau))\n",
+    "    plt.errorbar(magn*2*1./tau,gamma,gamma_err,label=r\"L = \"+str(l)+\" W = \"+str(w)+\", $\\Delta t$=\"+str(tau))\n",
     "\n",
-    "dtau = [0.76]\n",
-    "dtau = [0.76,1.0]\n",
+    "dtau = [0.76141]\n",
     "\n",
     "l=12\n",
     "w=24\n",
@@ -539,19 +546,24 @@
     "    #magn,gamma,gamma_err=np.loadtxt(\"plaquettes_with_transverse_field/LW3D\"+str(l)+\"tubes.dat\",unpack=True)\n",
     "    #plt.errorbar(magn*2*1./tau,gamma,gamma_err,label=r\"L = \"+str(l)+\", $\\Delta t$=\"+str(tau))\n",
     "\n",
-    "plt.axvline(0.65695)\n",
-    "plt.axvline(0.65695/2)\n",
     "\n",
     "plt.axvline(0.58224,linestyle='--')\n",
+    "plt.axvline(0.201158,linestyle='--')\n",
     "\n",
     "plt.axhline(0.0,color=\"black\")\n",
     "plt.axhline(np.log(2),color=\"red\")\n",
-    "plt.axhline(np.log(4),color=\"red\")\n",
     "\n",
-    "plt.xlabel(r\"loop tension~~~$h$\")\n",
-    "plt.ylabel(r\"$\\gamma$\")\n",
+    "plt.xlabel(r\"XY loop tension~~~$h = h_x = h_y$\")\n",
+    "plt.ylabel(r\"topological entropy~~~$\\gamma$\")\n",
+    "plt.text(0.35,0.5,r\"$h_z = 0.58224$\")\n",
     "\n",
-    "#plt.xlim(0.3,0.8)\n",
+    "plt.gcf().subplots_adjust(bottom=0.16,left=0.14,top=0.97,right=0.97)\n",
+    "ax=plt.gca()\n",
+    "ax.xaxis.set_ticks_position('bottom')\n",
+    "\n",
+    "\n",
+    "plt.xlim(0.0,0.7)\n",
+    "plt.ylim(-0.1,1.2)\n",
     "plt.legend(loc=\"upper right\",frameon=False,numpoints=1)\n",
     "plt.savefig(\"Gamma3d_transv_magn.pdf\")\n",
     "plt.show()"
