--- a/results/PlotMI+Gamma.ipynb
+++ b/results/PlotMI+Gamma.ipynb
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 56,
    "metadata": {
     "collapsed": true
    },
@@ -441,7 +441,7 @@
     "L=[8,12,16,20]\n",
     "for l in L:\n",
     "    beta,gamma,gamma_err=np.loadtxt(\"plaquettes/LW3D\"+str(l)+\"plalayers.dat\",unpack=True)\n",
-    "    plt.errorbar(beta,gamma/l,gamma_err,fmt='-',label=r\"L = \"+str(l)+\" layers, $\\gamma / L$\")\n",
+    "    plt.errorbar(beta,gamma/l,gamma_err,errorevery=5,capsize=1.5,fmt='-',label=r\"L = \"+str(l)+\" layers, $\\gamma / L$\")\n",
     "        \n",
     "plt.axvline(0.76141)\n",
     "plt.axvline(0.76141/2)\n",
@@ -451,6 +451,8 @@
     "\n",
     "plt.xlabel(r\"$\\beta$\")\n",
     "plt.ylabel(r\"$\\gamma$\")\n",
+    "ax=plt.gca()\n",
+    "ax.xaxis.set_ticks_position('bottom')\n",
     "\n",
     "#plt.xlim(0.19,0.81)\n",
     "plt.gcf().subplots_adjust(bottom=0.155)\n",
@@ -469,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -481,10 +483,10 @@
     "rcParams['text.usetex']     = True\n",
     "\n",
     "    \n",
-    "L=[8,12,16]\n",
+    "L=[8,12,16,20]\n",
     "for l in L:\n",
     "    magn,gamma,gamma_err=np.loadtxt(\"plaquettes_with_field/LW3D\"+str(l)+\"magntubes.dat\",unpack=True)\n",
-    "    plt.errorbar(magn,gamma,gamma_err,label=\"L = \"+str(l))\n",
+    "    plt.errorbar(magn,gamma,gamma_err,errorevery=5,capsize=1.5,label=\"L = \"+str(l))\n",
     "\n",
     "\n",
     "plt.axvline(0.221654)\n",
@@ -495,6 +497,8 @@
     "\n",
     "plt.xlabel(r\"loop tension~~~$h$\")\n",
     "plt.ylabel(r\"$\\gamma$\")\n",
+    "ax=plt.gca()\n",
+    "ax.xaxis.set_ticks_position('bottom')\n",
     "\n",
     "#plt.xlim(0.3,0.8)\n",
     "plt.legend(loc=\"lower left\",frameon=False,numpoints=1)\n",
@@ -511,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
@@ -525,14 +529,15 @@
     "    \n",
     "L=[8]\n",
     "l=8\n",
-    "W=[8,16,20,24]\n",
     "tau = 0.76141\n",
-    "TAU=[0.76141]\n",
-    "W=[8,12]\n",
+    "TAU=[0.76141,0.76145]\n",
+    "W=[8]\n",
+    "#TAU=[0.76141]\n",
     "#for w in W:\n",
-    "for w in W:\n",
-    "    magn,gamma,gamma_err=np.loadtxt(\"plaquettes_with_transverse_field/LW3D\"+str(l)+\"_\"+str(w)+\"_\"+str(tau)+\".dat\",unpack=True)\n",
-    "    plt.errorbar(magn*2*1./tau,gamma,gamma_err,label=r\"L = \"+str(l)+\" W = \"+str(w)+\", $\\Delta t$=\"+str(tau))\n",
+    "for tau in TAU:\n",
+    "    for w in W:\n",
+    "        magn,gamma,gamma_err=np.loadtxt(\"plaquettes_with_transverse_field/LW3D\"+str(l)+\"_\"+str(w)+\"_\"+str(tau)+\".dat\",unpack=True)\n",
+    "        plt.errorbar(magn*2*1./tau,gamma,gamma_err,label=r\"L = \"+str(l)+\" W = \"+str(w)+\", $\\Delta t$=\"+str(tau))\n",
     "\n",
     "dtau = [0.76141]\n",
     "\n",
@@ -563,7 +568,7 @@
     "\n",
     "\n",
     "plt.xlim(0.0,0.7)\n",
-    "plt.ylim(-0.1,1.2)\n",
+    "plt.ylim(-0.3,1.4)\n",
     "plt.legend(loc=\"upper right\",frameon=False,numpoints=1)\n",
     "plt.savefig(\"Gamma3d_transv_magn.pdf\")\n",
     "plt.show()"
