debugged update spin measurer

--- a/results/Plot Specific Heat.ipynb
+++ b/results/Plot Specific Heat.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -214,6 +214,60 @@
     "\n",
     "#plt.xlim(0.3,0.8)\n",
     "plt.legend(loc=\"upper left\",frameon=False,numpoints=1)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# X Cube Specific Heat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import rcParams\n",
+    "import prepare_plotting as pp\n",
+    "\n",
+    "pp.prepare_aps_fig(rcParams)\n",
+    "\n",
+    "\n",
+    "\n",
+    "L=[8]\n",
+    "for l in L:\n",
+    "    beta,cv,err=np.loadtxt(\"xcube/SpecHeatXCube\"+str(l)+\".dat\",unpack=True)\n",
+    "    plt.errorbar(beta,cv/(3*l**3),err/(3*l**3),errorevery=1,label=r\"L=\"+str(l))\n",
+    "    \n",
+    "beta,cv,err=np.loadtxt(\"vertices/SpecHeatverL8.dat\",unpack=True)\n",
+    "plt.errorbar(beta,cv/(3*l**3),err/(3*l**3),errorevery=1,label=r\"L=\"+str(l))\n",
+    "\n",
+    "beta,ener,enererr=np.loadtxt(\"vertices/EnergyL8.dat\",unpack=True)\n",
+    "plt.errorbar(beta,ener/(3*8**3),enererr/(3*8**3),label=r\"Energy L=\"+str(8))\n",
+    "\n",
+    "beta,ener,enererr=np.loadtxt(\"xcube/Energy8.dat\",unpack=True)\n",
+    "plt.errorbar(beta,ener/(3*8**3),enererr/(3*8**3),label=r\"Energy L=\"+str(8))\n",
+    "\n",
+    "    \n",
+    "\n",
+    "plt.axhline(0.0,color=\"black\")\n",
+    "\n",
+    "plt.xlabel(r\"inverse temperature~~~$\\beta$\")\n",
+    "plt.ylabel(r\"specific heat per spin~~~$c_V$\")\n",
+    "\n",
+    "plt.gcf().subplots_adjust(bottom=0.14)\n",
+    "plt.gcf().subplots_adjust(left=0.145)\n",
+    "\n",
+    "#plt.xlim(0.3,0.8)\n",
+    "plt.legend(loc=\"upper right\",frameon=False,numpoints=1)\n",
+    "plt.savefig(\"SpecHeatXCube.pdf\")\n",
     "plt.show()"
    ]
   }
