--- a/results/Plot Specific Heat.ipynb
+++ b/results/Plot Specific Heat.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -241,19 +241,19 @@
     "\n",
     "\n",
     "\n",
-    "L=[8]\n",
+    "L=[4,8]\n",
     "for l in L:\n",
     "    beta,cv,err=np.loadtxt(\"xcube/SpecHeatXCube\"+str(l)+\".dat\",unpack=True)\n",
-    "    plt.errorbar(beta,cv/(3*l**3),err/(3*l**3),errorevery=1,label=r\"L=\"+str(l))\n",
+    "    plt.errorbar(beta,cv/(3*l**3),err/(3*l**3),errorevery=1,label=r\"XCube L=\"+str(l))\n",
     "    \n",
     "beta,cv,err=np.loadtxt(\"vertices/SpecHeatverL8.dat\",unpack=True)\n",
-    "plt.errorbar(beta,cv/(3*l**3),err/(3*l**3),errorevery=1,label=r\"L=\"+str(l))\n",
+    "plt.errorbar(beta,cv/(3*l**3),err/(3*l**3),errorevery=1,label=r\"3D TC L=\"+str(l))\n",
     "\n",
     "beta,ener,enererr=np.loadtxt(\"vertices/EnergyL8.dat\",unpack=True)\n",
-    "plt.errorbar(beta,ener/(3*8**3),enererr/(3*8**3),label=r\"Energy L=\"+str(8))\n",
+    "#plt.errorbar(beta,ener/(3*8**3),enererr/(3*8**3),errorevery=5,label=r\"3D TC Energy L=\"+str(8))\n",
     "\n",
     "beta,ener,enererr=np.loadtxt(\"xcube/Energy8.dat\",unpack=True)\n",
-    "plt.errorbar(beta,ener/(3*8**3),enererr/(3*8**3),label=r\"Energy L=\"+str(8))\n",
+    "#plt.errorbar(beta,ener/(3*8**3),enererr/(3*8**3),errorevery=5,label=r\"XCube Energy L=\"+str(8))\n",
     "\n",
     "    \n",
     "\n",
@@ -261,12 +261,14 @@
     "\n",
     "plt.xlabel(r\"inverse temperature~~~$\\beta$\")\n",
     "plt.ylabel(r\"specific heat per spin~~~$c_V$\")\n",
+    "plt.xlim(0,3.0)\n",
+    "plt.ylim(0,0.5)\n",
     "\n",
-    "plt.gcf().subplots_adjust(bottom=0.14)\n",
-    "plt.gcf().subplots_adjust(left=0.145)\n",
+    "plt.gcf().subplots_adjust(bottom=0.16,left=0.17)\n",
+    "\n",
     "\n",
     "#plt.xlim(0.3,0.8)\n",
-    "plt.legend(loc=\"upper right\",frameon=False,numpoints=1)\n",
+    "plt.legend(loc=\"upper left\",frameon=False,numpoints=1)\n",
     "plt.savefig(\"SpecHeatXCube.pdf\")\n",
     "plt.show()"
    ]
