--- a/results/Plot Specific Heat.ipynb
+++ b/results/Plot Specific Heat.ipynb
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 96,
    "metadata": {
     "collapsed": false
    },
@@ -241,13 +241,13 @@
     "\n",
     "\n",
     "\n",
-    "L=[4,8]\n",
+    "L=[4,6,8,10,12]\n",
     "for l in L:\n",
     "    beta,cv,err=np.loadtxt(\"xcube/SpecHeatXCube\"+str(l)+\".dat\",unpack=True)\n",
     "    plt.errorbar(beta,cv/(3*l**3),err/(3*l**3),errorevery=1,label=r\"XCube L=\"+str(l))\n",
     "    \n",
-    "beta,cv,err=np.loadtxt(\"vertices/SpecHeatverL8.dat\",unpack=True)\n",
-    "plt.errorbar(beta,cv/(3*l**3),err/(3*l**3),errorevery=1,label=r\"3D TC L=\"+str(l))\n",
+    "beta,cv,err=np.loadtxt(\"vertices/SpecHeatverL20.dat\",unpack=True)\n",
+    "plt.errorbar(beta,cv/(3*20**3),err/(3*20**3),errorevery=1,label=r\"3D TC L=\"+str(20))\n",
     "\n",
     "beta,ener,enererr=np.loadtxt(\"vertices/EnergyL8.dat\",unpack=True)\n",
     "#plt.errorbar(beta,ener/(3*8**3),enererr/(3*8**3),errorevery=5,label=r\"3D TC Energy L=\"+str(8))\n",
@@ -261,7 +261,7 @@
     "\n",
     "plt.xlabel(r\"inverse temperature~~~$\\beta$\")\n",
     "plt.ylabel(r\"specific heat per spin~~~$c_V$\")\n",
-    "plt.xlim(0,3.0)\n",
+    "plt.xlim(0,1./0.21)\n",
     "plt.ylim(0,0.5)\n",
     "\n",
     "plt.gcf().subplots_adjust(bottom=0.16,left=0.17)\n",
@@ -270,6 +270,96 @@
     "#plt.xlim(0.3,0.8)\n",
     "plt.legend(loc=\"upper left\",frameon=False,numpoints=1)\n",
     "plt.savefig(\"SpecHeatXCube.pdf\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import rcParams\n",
+    "import prepare_plotting as pp\n",
+    "\n",
+    "pp.prepare_aps_fig(rcParams)\n",
+    "\n",
+    "inv = [0,1./12,1./10,1./8,1./6, 1./4]\n",
+    "peak = [0,1./2.15,1./1.975,1./1.735,1./1.45,1/1.05]\n",
+    "a,b = np.polyfit(inv[1:], peak[1:],1)\n",
+    "\n",
+    "X=np.linspace(0,0.25)\n",
+    "\n",
+    "plt.plot(inv,peak,'.')\n",
+    "plt.plot(X, a*X + b)\n",
+    "plt.xlim(-0.1, 0.3)\n",
+    "plt.ylim(-0.1, 1.3)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Haah's Code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import rcParams\n",
+    "import prepare_plotting as pp\n",
+    "\n",
+    "pp.prepare_aps_fig(rcParams)\n",
+    "\n",
+    "\n",
+    "\n",
+    "L=[4,6,8]\n",
+    "for l in L:\n",
+    "    beta,cv,err=np.loadtxt(\"haah/SpecHeatHaah\"+str(l)+\".dat\",unpack=True)\n",
+    "    plt.errorbar(beta,cv/(3*l**3),err/(3*l**3),errorevery=1,label=r\"Haah L=\"+str(l))\n",
+    "\n",
+    "l = 4\n",
+    "beta,cv,err=np.loadtxt(\"xcube/SpecHeatXCube\"+str(l)+\".dat\",unpack=True)\n",
+    "plt.errorbar(beta,cv/(3*l**3),err/(3*l**3),errorevery=1,label=r\"XCube L=\"+str(l))\n",
+    "\n",
+    "    \n",
+    "beta,cv,err=np.loadtxt(\"vertices/SpecHeatverL20.dat\",unpack=True)\n",
+    "plt.errorbar(beta,cv/(3*20**3),err/(3*20**3),errorevery=1,label=r\"3D TC L=\"+str(20))\n",
+    "\n",
+    "\n",
+    "beta,ener,enererr=np.loadtxt(\"vertices/EnergyL8.dat\",unpack=True)\n",
+    "#plt.errorbar(beta,ener/(3*8**3),enererr/(3*8**3),errorevery=5,label=r\"3D TC Energy L=\"+str(8))\n",
+    "\n",
+    "beta,ener,enererr=np.loadtxt(\"xcube/Energy8.dat\",unpack=True)\n",
+    "#plt.errorbar(beta,ener/(3*8**3),enererr/(3*8**3),errorevery=5,label=r\"XCube Energy L=\"+str(8))\n",
+    "\n",
+    "    \n",
+    "\n",
+    "plt.axhline(0.0,color=\"black\")\n",
+    "\n",
+    "plt.xlabel(r\"inverse temperature~~~$\\beta$\")\n",
+    "plt.ylabel(r\"specific heat per spin~~~$c_V$\")\n",
+    "plt.xlim(0,2.5)\n",
+    "plt.ylim(0,0.5)\n",
+    "\n",
+    "plt.gcf().subplots_adjust(bottom=0.16,left=0.17)\n",
+    "\n",
+    "\n",
+    "#plt.xlim(0.3,0.8)\n",
+    "plt.legend(loc=\"upper left\",frameon=False,numpoints=1)\n",
+    "plt.savefig(\"SpecHeatHaah.pdf\")\n",
     "plt.show()"
    ]
   }
